events and event handling started

--- a/dom/domPractice.html
+++ b/dom/domPractice.html
@@ -79,6 +79,6 @@
       <li>googin</li>
       <li>high</li>
     </ul> -->
-    <script src="practice.js"></script>
+    <script src="domPractice.js"></script>
   </body>
 </html>
