--- a/dom/dom.html
+++ b/dom/dom.html
@@ -37,6 +37,6 @@
     <!-- <h1 class="ali">style krdo mjhe piyare bhai....</h1> -->
 
 
-    <script src="script.js"></script>
+    <script src="dom.js"></script>
   </body>
 </html>
