further events practice

--- a/eventListners/index.html
+++ b/eventListners/index.html
@@ -9,12 +9,49 @@
             background-color: black;
             color: white;
         }
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html, body{
+            width: 100%;
+            height: 100%;
+        }
+        #main{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            background-color: #222;
+        }
+        h1{
+            color: #555;
+            font-size: 8rem;
+            font-weight: 300;
+            user-select: none;
+        }
     </style>
 </head>
 <body>
     <!-- <h1>appple</h1> -->
 
-    <input type="text" placeholder="name">
+    <!-- <input type="text" placeholder="name"> -->
+
+    <!-- <h3>Select Your device</h3>
+    <select>
+        <option selected disabled>Choose Your device</option>
+        <option value="samsung">Samsung</option>
+        <option value="mi">Xiomi</option>
+        <option value="appple">Iphone</option>
+        <option value="oppo">Oppo</option>
+    </select> -->
+
+
+    <div id="main">
+        <h1>a</h1>
+    </div>
 </body>
 
 <script src="script.js"></script>
