--- a/eventListners/index.html
+++ b/eventListners/index.html
@@ -1,40 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        body{
-            background-color: black;
-            color: white;
-        }
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        html, body{
-            width: 100%;
-            height: 100%;
-        }
-        #main{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 100%;
-            background-color: #222;
-        }
-        h1{
-            color: #555;
-            font-size: 8rem;
-            font-weight: 300;
-            user-select: none;
-        }
+      body {
+        background-color: black;
+        color: white;
+      }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+      }
+      #main {
+        padding: 30px;
+        width: 100%;
+        height: 100%;
+        background-color: #222;
+      }
+
+      input {
+        display: block;
+        margin: 10px;
+      }
+
+      #btn {
+        padding: 12px;
+        background-color: rgb(47, 170, 133);
+        color: rgb(246, 246, 246);
+        border-radius: 10px;
+        font-weight: 300;
+        font-size: 20px;
+      }
+      #main #btn:hover {
+        background-color: rgb(21, 100, 76);
+      }
+
+      .card {
+        max-width: 300px;
+        margin-top: 40px;
+        border-radius: 10px;
+        display: inline-block;
+        padding: 20px;
+        border: 1px solid #555;
+      }
+      .profile {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+        overflow: hidden;
+      }
+
+      .profile img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .card p {
+        font-size: 14px;
+        margin-top: 7px;
+      }
+
+      .card h5 {
+        margin-top: 7px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <!-- <h1>appple</h1> -->
 
     <!-- <input type="text" placeholder="name"> -->
@@ -48,11 +89,23 @@
         <option value="oppo">Oppo</option>
     </select> -->
 
+    <!-- <div id="main">
+        <input id="fileinp" type="file">
+        <div id="btn">
+            Upload File
+        </div>
+    </div> -->
 
     <div id="main">
-        <h1>a</h1>
+      <form action="">
+        <input type="text" placeholder="name" />
+        <input type="text" placeholder="age" />
+        <input type="text" placeholder="email" />
+        <input type="text" placeholder="profilepic" />
+        <input type="submit" />
+      </form>
     </div>
-</body>
+  </body>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </html>
