--- a/eventListners/index.html
+++ b/eventListners/index.html
@@ -20,6 +20,22 @@
         height: 100%;
         padding: 30px;
       }
+
+      .a{
+        width: 800px;
+        height: 500px;
+        background: rgba(211, 117, 117, 0.311);
+      }
+      .b{
+        width: 700px;
+        height: 400px;
+        background: green;
+      }
+       .c{
+        width: 600px;
+        height: 300px;
+        background: midnightblue;
+      }
       
     </style>
   </head>
